argocd/manifests/alertmanager-ntfy-bridge/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-ntfy-bridge
  namespace: monitoring
  labels:
    app: alertmanager-ntfy-bridge
spec:
  selector:
    app: alertmanager-ntfy-bridge
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
