argocd/manifests/alertmanager-ntfy-bridge/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ntfy-bridge-actions
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: alerts.levangie.dev
      http:
        paths:
          - path: /actions
            pathType: Prefix
            backend:
              service:
                name: alertmanager-ntfy-bridge
                port:
                  number: 80
